kubernetes/base/protonmail-bridge/bases/server/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protonmail-bridge
  labels:
    project: protonmail-bridge
    component: bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      project: protonmail-bridge
      component: bridge
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: protonmail-bridge
        component: bridge
    spec:
      containers:
        - name: bridge
          image: noahhuppert/proton-bridge:all-host-5 # shenxn/protonmail-bridge:latest
          command:
            - /bin/bash
            - /protonmail/entrypoint.sh
          #args: [ "-c", "sleep infinity" ]
          ports:
            - name: smtp
              containerPort: 1025
            - name: imap
              containerPort: 1143
          volumeMounts:
            - name: data
              mountPath: /root
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: protonmail-bridge
