kubernetes/base/protonmail-bridge/bases/server/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protonmail-bridge
  labels:
    project: protonmail-bridge
    component: bridge
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: protonmail-bridge.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: protonmail-bridge
            port:
              number: 143
  tls:
  - hosts:
    - protonmail-bridge.k8s.funkyboy.zone
    secretName: protonmail-bridge-ingress-cert
